--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ecoflow-api/rest-client": "^0.0.14",
+    "apexcharts": "^4.3.0",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
+    "next": "15.1.3",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.7",
+    "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-table": "^7.8.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
